[tool.poetry]
name = "netem"
version = "0.1.0"
description = "Network Emulator"
authors = ["clarkzjw <clarkzjw@uvic.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
